--- a/web_architecture_drills/html_css/pricing-html-css/index.css
+++ b/web_architecture_drills/html_css/pricing-html-css/index.css
@@ -18,6 +18,7 @@ h1{
 }
 h3{
     color: #9aa6b6;
+    font-size: 17px;
 }
 h4{
     font-size: 21px;
@@ -30,7 +31,7 @@ h4{
     
 }
 .container{
-    padding: 2rem;
+    padding: 1rem;
     
 }
 .toggle{
@@ -39,8 +40,8 @@ h4{
     align-items: center;
 }
 .button{
-    width: 60px;
-    height: 32px;
+    width: 42px;
+    height: 22px;
     background-color: rgb(165, 165, 165);
     border-radius: 50px;
     cursor: pointer;
@@ -50,7 +51,7 @@ input:checked + .button{
     background-color: hsl(237, 63%, 64%);
 }
 input:checked + .button::before{
-    transform: translateX(-28px);
+    transform: translateX(-19px);
 }
 input{
     display: none;
@@ -59,10 +60,9 @@ input{
 .button::before{
     position:absolute;
     content: "";
-    
-    width: 30px;
-    height: 30px;
-    left:28px;
+    width: 20px;
+    height: 20px;
+    left:19px;
     background-color: white;
     border-radius: 100%;
     margin: 1px;
@@ -71,20 +71,20 @@ input{
    display: flex;
    flex-direction: column;
    align-items: center;
-   margin-bottom: 3rem;
+   margin-bottom: 2rem;
    /* border: 1px solid black; */
    
 }
 
 
 .option{
-    width: 15rem;
+    width: 13rem;
     display: flex;
     justify-content: space-around;
 }
 
 .dollar{
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -95,19 +95,20 @@ input{
     padding: 3rem 2rem;
 }
 .card{
-    width: 24rem;
-    height:28rem;
+    width: 21%;
+    height:20%;
     /* border:1px solid black; */
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 3rem 1rem;
-    margin:5px;
+    margin:1px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    color: rgb(46, 46, 46);
+    color: rgb(75, 75, 75);
     background-color: rgb(255, 255, 255);
     transition: 100ms linear;
+    cursor: pointer;
 }
 
 .active:hover{
@@ -124,14 +125,14 @@ input{
     color: #6e6ed2;
 }
 .active:hover > .details li, .active:hover > .price{
-    border-bottom: 1px solid white;
+    border-bottom: 0.2px solid rgb(229, 229, 229);
 }
 .price{
     font-size: 54px;
-    padding:1rem 5px;
+    padding:1.6rem 5px;
     border-bottom: 1px solid grey;
     /* border: 1px solid black; */
-    width: 20rem;
+    width: 80%;
     text-align: center;
     
 }
@@ -139,7 +140,7 @@ input{
 }
 ul{
     list-style-type: none;
-    width:20rem;
+    width:16rem;
     /* border: 1px solid black; */
     padding:10px;
     text-align: center;
@@ -148,8 +149,8 @@ ul{
 }
 
 ul li{
-    width: 100%;
-    font-size: 20px;
+    width: 95%;
+    font-size: 15px;
     font-weight: 500;
     padding: 10px 5px;
     border-bottom:1px solid grey;
@@ -158,14 +159,14 @@ ul li{
 }
 
 .btn{
-    width:22rem;
-    height:3rem;
-    margin-top: 3rem;
+    width:85%;
+    height:2.5rem;
+    margin-top: 2rem;
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     color: white;
     border-radius: 5px;
@@ -174,7 +175,7 @@ ul li{
 }
 
 .initial-active{
-    scale: 1.1;
+    scale: 1;
     background-image: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
     color: white;
 }
