--- a/web_architecture_drills/html_css/pricing-html-css/index.css
+++ b/web_architecture_drills/html_css/pricing-html-css/index.css
@@ -170,7 +170,7 @@ ul li:nth-child(1){
 .btn{
     width:85%;
     height:2.5rem;
-    margin-torem;
+    margin-top: 3rem;
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
